--- a/index.html
+++ b/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Happy Birthday Shivanshu</title>
+    <title>Happy Birthday my cutuuuu😘❤️</title>
     <meta charset="utf-8" />
     <meta name="language" content="en-us" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <style type="text/css">
       * {
-        background: #fff;
+        background: #FFAFBD;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #ffc3a0, #FFAFBD);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #ffc3a0, #FFAFBD); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
       }
 
       #loveHeart {
-        background: transparent;
-        background: url("smile.gif") no-repeat center;
-      }
+  background: transparent;
+  background: url("pic2.jpg") no-repeat center;
+  background-size: contain; /* makes it scale nicely */
+}
+
       #copyright {
         font-family: "Montserrat", sans-serif;
       }
@@ -49,16 +54,33 @@
     />
   </head>
 
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const audio = document.querySelector("audio");
+
+    // Wait for a user gesture
+    document.body.addEventListener("click", function playAudioOnce() {
+      audio.play();
+      // Remove the listener so it doesn't play again on future clicks
+      document.body.removeEventListener("click", playAudioOnce);
+    });
+  });
+</script>
+
+
+
+
+
   <body>
     <div style="padding-top: 10px;" class="section">
 		<div class="columns">
 			<div class="column is-12">
 				<center>
-					<audio controls loop>
+					<audio controls autoplay loop>
 						<source src="song.mp3" type="audio/mpeg">
 					</audio>
 					<br />
-					<span class="disc">Disclaimer : Hey Man, This time again stuck with Autoplay thing, Just Play it Manually, Scroll your screen and Enjoy! For Better view Use Laptop </span>
+					<!-- <span class="disc">Disclaimer : Hey Man, This time again stuck with Autoplay thing, Just Play it Manually, Scroll your screen and Enjoy! For Better view Use Laptop </span> -->
 				</center>
 			</div>
 		</div>
@@ -67,15 +89,15 @@
 			<div class="columns"> 
 				<div id="code" class="column is-6 is-offset-2">
 					<span class="comments">/**</span><br />
-					<span class="space"/><span class="comments">* Today, the 29th day of May, is your birthday.</span><br />
-					<span class="space"/><span class="comments">* So I created a webpage to celebrate this special day.</span><br />
+					<span class="space"/><span class="comments">* Today, the 5th day of August, is your birthday.</span><br />
+					<span class="space"/><span class="comments">* So to make it special for my bubuu ...i made this😌</span><br />
 					<span class="space"/><span class="comments">*/</span><br />
-					Boy u = <span class="keyword">new</span> Boy(<span class="string">"Shivanshu Mathur"</span>);<br />
-					<span class="comments">// May 28th, when the bell rang, your age increased </span><br />
+					Boy u = <span class="keyword">new</span> Boy(<span class="string">"Hardik Singhal"</span>);<br />
+					<span class="comments">// August 5th, when the bell rang, your age increased </span><br />
 					Date currentTime = <span class="keyword">new</span> Date(); <br />
 					SimpleDateFormat formatter = <span class="keyword">new</span> SimpleDateFormat(<span class="string">"yyyy-MM-dd HH:mm:ss"</span>);<br />
 					String dateString = formatter.format(currentTime);<br />
-					if( dateString.equals(<span class="string">"2020-05-29 00:00:00"</span>) ){</br>
+					if( dateString.equals(<span class="string">"2020-08-05 12:00:00"</span>) ){</br>
 						u.age ++;</br>
 					}</br>
 					<span class="comments">// My best wishes will be with you simultaneously.</span><br />
@@ -90,7 +112,7 @@
 					<span class="comments">// and everything you wish can be achieved.</span><br />
 					}.start()</br>
 					<span class="comments">// The last thing I wanna say:</span><br />
-					System.out.println(<span class="string">"Happy Birthday!"</span>);
+					System.out.println(<span class="string">"Happy Birthday my loveeee!❤️"</span>);
 				</div>
 				<div id="loveHeart" class="is-4 column">
 					<canvas id="garden" style="display:none"></canvas>
@@ -102,7 +124,7 @@
 			<div class="columns">
 				<div class="column is-12" id="copyright">
 					<center>
-						<p>Made with love by <a href="https://www.facebook.com/smilegupta.1998" target="_blank">Smile Gupta</a></p>
+						<p>Made with love by <a href="" target="_blank">Your Laadliii❤️🥰</a></p>
 					</center>
 				</div>
 			</div>
